# FullStackAton

./: README.md
backend/: .gitignore  alembic.ini  docker-compose-local.yaml  manager.py  pyproject.toml
backend/alembic/: env.py
backend/src/alembic/: env.py
backend/src/alembic/versions/: 2024_04_17_2055-d6a8c54ed761_add_all_models.py
backend/src/api/core/: config.py
backend/src/api/core/models/: __init__.py  base.py  clients.py  db_manage.py  mixins.py  test_tokens.py  tokens.py  users.py
backend/src/api/core/utils/: db_manage.py
backend/src/unittests/: test_clients.py  test_config.py  test_manager.py  test_tokens.py  test_users.py
backend/tests/: test_manager.py
backend/unittests/: test_config.py  test_users.py
