[tool.poetry]
name = "fast-api-aton-backend"
version = "0.1.0"
description = ""
authors = ["Eugene <e.krotov03@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
uvicorn = {extras = ["all"], version = "^0.29.0"}
sqlalchemy = {extras = ["all"], version = "^2.0.29"}
alembic = "^1.13.1"
black = "^24.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
