[tool.poetry]
name = "fast-api-aton-backend"
version = "0.1.0"
description = ""
authors = ["Eugene <e.krotov03@gmail.com>"]
license = "MIT"
readme = "README.md"
#package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
uvicorn = {extras = ["all"], version = "^0.29.0"}
black = "^24.4.0"
asyncpg = {extras = ["all"], version = "^0.29.0"}
typer = "^0.12.3"
alembic = {extras = ["all"], version = "^1.13.1"}
psycopg2 = "^2.9.9"
sqlalchemy-utils = "^0.41.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88